--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build:dev": "webpack",
 		"build:prod": "webpack -p --env production",
 		"dev-server": "webpack-dev-server",
-		"test": "jest --config=jest.config.json",
+		"test": "cross-env NODE_ENV=test jest --config=jest.config.json",
 		"start": "node server/server.js",
 		"heroku-postbuild": "npm run build:prod"
 	},
@@ -25,6 +25,7 @@
 		"enzyme-adapter-react-16": "^1.0.0",
 		"express": "^4.17.1",
 		"extract-text-webpack-plugin": "^3.0.2",
+		"firebase": "^7.23.0",
 		"moment": "^2.29.1",
 		"node-sass": "^4.14.1",
 		"normalize.css": "^7.0.0",
@@ -34,10 +35,12 @@
 		"react-addons-shallow-compare": "^15.6.0",
 		"react-dates": "^12.7.0",
 		"react-dom": "^16.0.0",
-		"react-modal": "^2.2.2",
+		"react-modal": "^2.4.1",
 		"react-redux": "^5.0.5",
 		"react-router-dom": "^5.2.0",
 		"redux": "^3.7.2",
+		"redux-mock-store": "^1.5.4",
+		"redux-thunk": "^2.3.0",
 		"sass-loader": "^7.3.1",
 		"style-loader": "^0.18.2",
 		"uuid": "^8.3.1",
@@ -45,8 +48,10 @@
 		"webpack": "^3.1.0"
 	},
 	"devDependencies": {
+		"cross-env": "^7.0.2",
+		"dotenv": "^4.0.0",
 		"enzyme": "^3.0.0",
-		"enzyme-to-json": "^3.0.1",
+		"enzyme-to-json": "^3.6.1",
 		"jest": "^20.0.4",
 		"react-test-renderer": "^16.0.0",
 		"webpack-dev-server": "^2.5.1"
